Group worked on fixing overflow, passing username value down component tree. Created randomizer to display random advice objects in result-component

--- a/src/styles/_zoltarRedEyes.scss
+++ b/src/styles/_zoltarRedEyes.scss
@@ -1,22 +1,22 @@
 
-.zoltar-red-eyes {
+.zoltarRedEyes {
     position: absolute;
     opacity: 0;
-    animation: red-eyes 1.4s linear infinite;
+    animation: redEyes 1.4s linear infinite;
 }
-.zoltar-red-eyes-mouth {
+.zoltarRedEyesMouth {
     position: absolute;
     z-index: 10;
     top: 0px;
     left: 0;
-    animation: moving-mouth-results 1.5s linear forwards;
+    animation: movingMouthResults 1.5s linear forwards;
     // animation-duration: 2s;
     // animation-iteration-count: infinite;
     // animation-timing-function: linear;
 }
 
 
-@keyframes moving-mouth-results {
+@keyframes movingMouthResults {
     0% {top: 0px;}
     25% {top: 7.5px;}
     50% {top: 15px;}
@@ -24,7 +24,7 @@
     100% {top: 30px;}
 }
 
-@keyframes red-eyes {
+@keyframes redEyes {
     0% {opacity: 0;}
     25% {opacity: 50%}
     50% {opacity: 100%}
